--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: Matt McGill
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Development blog
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars.githubusercontent.com/u/12445696?v=3
@@ -19,17 +19,17 @@ avatar: https://avatars.githubusercontent.com/u/12445696?v=3
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email: mmmcgill1232@gmail.com
   facebook:
   flickr:
-  github: barryclark/jekyll-now
+  github: 
   instagram:
   linkedin:
   pinterest:
   rss: # just type anything here for a working RSS icon, make sure you set the "url" above!
-  twitter: jekyllrb
+  twitter: 
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
-  youtube: # channel/<your_long_string> or user/<user-name>
+  youtube: user/mmmcgill1232
   googleplus: # anything in your profile username that comes after plus.google.com/
 
 
