--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,7 @@ footer-links:
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: user/mmmcgill1232
   googleplus: # anything in your profile username that comes after plus.google.com/
+  deviantart: mmmcgill1232
 
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
