--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,8 @@
 # This file contains configuration flags to customize your site
 #
 
+excerpt_separator: <!--more-->
+
 # Name of your site (displayed in the header)
 name: Matt McGill
 
