--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # This file contains configuration flags to customize your site
 #
 
-excerpt_separator: <!--more-->
+excerpt_separator: <span class="more"></span>
 
 # Name of your site (displayed in the header)
 name: Matt McGill
