--- a/_config.yml
+++ b/_config.yml
@@ -72,6 +72,8 @@ sass:
 gems:
   - jekyll-sitemap # Create a sitemap using the official Jekyll sitemap gem
 
+paginate: 5
+
 # Exclude these files from your production _site
 exclude:
     - Gemfile
