--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 excerpt_separator: <span class="more"></span>
 
 # Name of your site (displayed in the header)
-name: Matt McGill Dev Blog
+name: Matt McGill
 
 # Short bio or description (displayed in the header)
 description: Development blog
